--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
 		"@sveltejs/adapter-auto": "^2.0.0",
 		"@sveltejs/adapter-netlify": "^2.0.8",
 		"@sveltejs/kit": "^1.20.4",
+		"autoprefixer": "^10.4.16",
+		"postcss": "^8.4.30",
 		"svelte": "^4.0.5",
+		"tailwindcss": "^3.3.3",
 		"vite": "^4.4.2"
 	},
 	"type": "module"
