--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"@sveltejs/adapter-netlify": "^2.0.8",
 		"@sveltejs/kit": "^1.20.4",
 		"autoprefixer": "^10.4.16",
+		"daisyui": "^3.8.3",
 		"postcss": "^8.4.30",
 		"svelte": "^4.0.5",
 		"tailwindcss": "^3.3.3",
